views/Route.serving.knative.dev.yaml
---
kind: "Route"
api_family: "serving.knative.dev"
default_command: "routes.serving.knative.dev"
command:
  - "routes.knative"
  - "route.knative"
  - "knroutes"
  - "knroute"
listview:
  name: "Routes"
  group: "Knative"
  field_indexes:
    Normal:
      fields: ["namespace", "name", "controller", "age", "ready", "reason"]
  fields:
    controller:
      header: "Controller:"
      paths:
        - path: "metadata#ownerReferences"
          pathtype: "items"
          subpaths:
            - "kind"
            - "apiVersion"
            - "name"
          when:
            - key: "controller"
              eq: true
          type: ["kind", "api_group", "name"]
          default: ["<none>"]
      formatter: "list"
      formatting:
        field_colors:
          - type: "kind"
          - type: "api_group"
          - type: "generic"
        field_separators:
          - type: "kind_api_group"
          - type: "kind"
    ready:
      header: "Ready:"
      paths:
        - path: "status#conditions"
          pathtype: "items"
          subpath: "status"
          when:
            - key: "type"
              eq: "Ready"
          default: ["<unset>"]
      type: "str"
      formatter: "value_mapper"
      formatting:
        mapping:
          mappings:
            "True":
              field_colors:
                - context: "main"
                  type: "status_ok"
            "False":
              field_colors:
                - context: "main"
                  type: "status_not_ok"
            "<unset>":
              field_colors:
                - context: "types"
                  type: "unset"
    reason:
      header: "Reason:"
      paths:
        - path: "status#conditions"
          pathtype: "items"
          subpath: "message"
          when:
            - key: "type"
              eq: "Ready"
      type: "str"
      formatter: "value_mapper"
      formatting:
        mapping:
          mappings:
            "True":
              field_colors:
                - context: "main"
                  type: "status_ok"
            "False":
              field_colors:
                - context: "main"
                  type: "status_not_ok"
  actions:
    actionlist:
      "Delete resource":
        description: "Delete resource"
        category: "Resource Level"
        confirm: true
        actionfunc: "delete_resource"
infoview:
  name: "Route Info"
  infopad:
    row_indexes:
      Normal:
        fields: ["controller", "url", "ready", "reason"]
    rows:
      controller:
        header: [["C", ["main", "infoheader_shortcut"]],
                 ["ontroller:", ["main", "infoheader"]]]
        paths:
          - path: "metadata#ownerReferences"
            pathtype: "items"
            subpaths:
              - "kind"
              - "apiVersion"
              - "name"
            when:
              - key: "controller"
                eq: true
            type: ["kind", "api_group", "name"]
            default: ["<none>"]
        formatter: "list"
        formatting:
          field_colors:
            - type: "kind"
            - type: "api_group"
            - type: "generic"
          field_separators:
            - type: "kind_api_group"
            - type: "kind"
      ready:
        header: [["Ready:", ["main", "infoheader"]]]
        paths:
          - path: "status#conditions"
            pathtype: "items"
            subpath: "status"
            when:
              - key: "type"
                eq: "Ready"
            default: ["<unset>"]
        type: "str"
        formatter: "value_mapper"
        formatting:
          mapping:
            mappings:
              "True":
                field_colors:
                  - context: "main"
                    type: "status_ok"
              "False":
                field_colors:
                  - context: "main"
                    type: "status_not_ok"
              "<unset>":
                field_colors:
                  - context: "types"
                    type: "unset"
      reason:
        header: [["Reason:", ["main", "infoheader"]]]
        paths:
          - path: "status#conditions"
            pathtype: "items"
            subpath: "message"
            when:
              - key: "type"
                eq: "Ready"
        type: "list"
        formatter: "list"
      url:
        header: [["URL:", ["main", "infoheader"]]]
        path: "status#address#url"
        type: "str"
  shortcuts:
    "Open controller":
      key: "c"
      modifier: "shift"
      read_only: true
      helptext: "Open info page for controller"
      action: "call"
      action_call: "resourceinfodispatch_with_lookup"
      action_args:
        _pass_obj: true
        namespace_path: "metadata#namespace"
        owner_reference_path: "metadata#ownerReferences"
    "Show traffic info":
      key: "t"
      modifier: "shift"
      read_only: true
      helptext: "Show traffic info"
      widget: "windowwidget"
      widget_args:
        headers: ["Revision Name:", "Percent:", "Latest:"]
        itemgetter: "get_list_fields"
        itemgetter_args:
          path: "status#traffic"
          fields:
            - "revisionName"
            - "percent"
            - "latestRevision"
        # This isn't supported for now
        sortcolumn: "revision_name"
